--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MediMate</string>
+    <string name="sign_in_text">Streamline your healthcare operations with our innovative app, ensuring accurate inventory tracking, efficient supply chain management, and enhanced patient care.</string>
     <string name="pending_text">Order New Item....</string>
     <string name="approved_text">Wait for your orders to be approved....</string>
     <string name="declined_text">Happy to see you have no order declined....</string>
